# Armis

./: .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  init-mongo.js  mypy.ini  pyproject.toml
app/: data_procesing_startegy.py  main.py
app/core/: mongo_db.py  settings.py
app/models/: vendor_a.py  vendor_b.py
app/services/: deduplicate.py  fetch.py  mongo_service.py  normalize.py
