[tool.poetry]
name = "armis"
version = "0.1.0"
description = ""
authors = ["Victor Vrabii"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.7.0"
pymongo = "^4.11.3"
httpx = "^0.28.1"
pydantic = "^2.11.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
ruff = "^0.11.4"
mypy = "^1.15.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "W"]
lint.select = ["E", "F", "W"]

[tool.black]
line-length = 88